--- a/assets/styles/scss/base/_reset.scss
+++ b/assets/styles/scss/base/_reset.scss
@@ -3,3 +3,9 @@
 \* -------------------------------------------------------------------------- */
 
 // See '../vendors/reboot';
+
+body {
+  margin: 0 auto;
+  background-color: var(--background-color);
+  color: var(--foreground-color);
+}
