--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -56,6 +56,7 @@
 @import 'components/single-part/table';
 @import 'components/single-part/tag';
 @import 'components/single-part/title';
+@import 'components/single-part/toggle';
 
 /* -------------------------------------------------------------------------- *\
 // *  Partial SCSS Group 5.2 - `components/forms/`
