--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -524,13 +524,6 @@ body {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-item-align: center;
-      align-self: center;
-  -ms-flex-line-pack: center;
-      align-content: center;
 }
 
 .topnav input[type='text'] {
@@ -557,7 +550,11 @@ body {
 
 @media (max-width: 40rem) {
   .topnav .search-container {
-    float: none;
+    display: block;
+    width: 100%;
+  }
+  label.theme-switch {
+    margin: 8px;
   }
   .topnav a,
   .topnav input[type='text'],
