style-main: Iniating BEM transformation v2

--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -712,6 +712,10 @@ body {
 /* -------------------------------------------------------------------------- *\
 // *  _icon.scss: This partial file contains all 'icon' styles.
 \* -------------------------------------------------------------------------- */
+svg {
+  fill: var(--foreground-color);
+}
+
 /* -------------------------------------------------------------------------- *\
 // *  _image.scss: This partial file contains all 'image' styles.
 \* -------------------------------------------------------------------------- */
