--- a/assets/styles/scss/components/single-part/_icon.scss
+++ b/assets/styles/scss/components/single-part/_icon.scss
@@ -1,3 +1,7 @@
 /* -------------------------------------------------------------------------- *\
 // *  _icon.scss: This partial file contains all 'icon' styles.
 \* -------------------------------------------------------------------------- */
+
+svg {
+  fill: var(--foreground-color);
+}
